--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
