added loader to full website

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "react-spinners": "^0.17.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.6",
